2005-12-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - Added a verify() function to check whether an update reference
	    contains a list with valid identifiers.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/polbase.cpp :

	  - Removed the redundand gndflag parameter from the verify() and
	    and vcopy() functions. Passing a NULL ptr for the vlist parameter
	    implies that we are checking a ground expression.

	* lib/Makefile.in :

	  - More dependency corrections.

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/wrapper.cpp :
	* main/policy.y :

	  - Now uses the new varlist instead of stringlist.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed unused verify functions.

	  - Cleanup.

	  - Now uses the built-in verify and vcopy functions of different
	    classes.

	  - Its own verify functions are disabled for now.

	* lib/Makefile.in :
        * lib/varlist.cpp :
        * lib/varlist.h :

	  - Added a varlist (actually a stringlist, but with verify
	    capabilities).

        * lib/expression.cpp :
        * lib/expression.h :
        * lib/fact.cpp :
        * lib/fact.h :

	  - Added a copy() and/or a vcopy() function to duplicate and to verify
	    and duplicate a fact or an expression.

	* lib/identifier.h

	  - Redefined the macros so that the identifiers subject, access right
	    and object are 0, 1 and 2, respectively. Group subjects, access
	    rights and objects are formed by bitwise-or'ing with 4 (i.e. 5, 6
	    and 7, respectively).

	* lib/symtab.cpp :
	* lib/symtab.h :

	  - Added mapping and unmapping functions to convert the new identifier
	    types to 0, 1, 2, 3, 4 & 5, which are used as indices to the
	    symtab's internal arrays.

	* main/policy.y :

	  - Some macro changes to reflect the changes in identifier.h.